# pdf-sdl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: examples.py
src/pdf_sdl/: __init__.py
src/pdf_sdl/builder/: __init__.py  datadef_builder.py  linkmeta_builder.py
src/pdf_sdl/cli/: main.py
src/pdf_sdl/models/: __init__.py  datadef.py  linkmeta.py
src/pdf_sdl/pdf/: __init__.py  reader.py  writer.py
src/pdf_sdl/validator/: __init__.py  conformance.py
tests/: test_pdf_sdl.py
